# Kohonen-Fashion

./: CMakeLists.txt  README.md
include/glad/: glad.h
include/opengl/: renderer.h
include/som/: som.h
src/: glad.c  main.cpp  renderer.cpp  som.cpp  summary_report.cpp  test_mapper.cpp  train_som.cpp  visualize_som.cpp
utils/: convert_mnist.py  convert_mnist_test.py  test_neuron_finder.cpp
